--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.a33y.jo.madgasyexams"
     android:installLocation="auto">
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -17,14 +14,15 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.NoActionBar">
+        android:theme="@style/AppTheme.NoActionBar"
+        android:name=".MadagasyExamsApplication">
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-7038787403547669~5916734641"/>
-        <activity android:name=".MainActivity2"/>
+        <activity android:name=".activities.MainActivity"/>
 
         <service
-            android:name=".FirebaseMessagingService"
+            android:name=".helpers.FirebaseMessagingService"
             android:enabled="true"
             android:exported="false">
             <intent-filter>
@@ -33,8 +31,8 @@
         </service>
 
 
-        <activity android:name=".PdfViewer" />
-        <activity android:name=".SplashActivity"
+        <activity android:name=".activities.PdfViewer" />
+        <activity android:name=".activities.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
